# RustF

./: .gitignore  ARCHITECTURE.md  Cargo.toml  GEMINI.md  QWEN.md  bug1.md  bug2.md  bug3.md  bug4.md  bug5.md  bug6.md  bug7.md  readme.md  user_guide.md  优化1.md  增加功能1.md  新增需求1.md  新增需求2.md  需求1.md  需求2.md
.github/workflows/: main.yml  rust.yml
src/: app.rs  file_handler.rs  font_utils.rs  main.rs  pandoc.rs  state.rs
src/ui/: dialogs.rs  image_utils.rs  menu.rs  mod.rs  panels.rs
