[package]
name = "RustF"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.1"
eframe = { version = "0.32.1", features = ["wgpu"] }
egui_commonmark = "0.21.1"
rfd = "0.15.4"
regex = "1.11.2"
tempfile = "3.21.0"
crossbeam-channel = "0.5.13"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"